style-mobile.css
@keyframes fadeIn {
    0% {
        background: black;
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

html,
body {
    animation: 1s ease-in-out 0s 1 fadeIn;
    zoom: 1;
    transform: scale(1.0);
    transform-origin: 0 0;
    background: black;
    overflow: hidden;
    height: 100%;
    font-family: 'PT Sans', sans-serif;
}

.wrapper {
    position: relative;
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
    height: 100%;
    background: rgb(255, 255, 255);
    width: 100%;

}

.wrapper-nav-underlay{
    position: absolute;
    z-index: 3;
    color: black;

    width: 60px;
    height: 100%;
    left: 0px;
    top: 0px;
    transition: all 0.5s ease;
    transition-property: opacity, transform;
}

.wrapper-nav {
    position: absolute;
    width: 100%;
    height: 100%;
    transition: all 0.5s ease;
    transition-property: opacity, transform;
    background-color: rgb(19, 19, 19);
    color: white;
    z-index: 2;
}

.simplebar-offset{
    left: 0px;
}

.simplebar-content{
    height: 100%;
}

.wrapper-nav-btn{
    position: absolute;
    width: 30px;
    height: 30px;
    left: 17px;
    top: 20px;
    box-sizing: border-box;
}

.w-inner-nav-btn{
    left: 40px;
    top: 20px;
}

.nav-btn{
    position: relative;
    width: 30px;
    height: 20px;
    z-index: 5;
    cursor: pointer;
}

.nav-btn:hover > .nav-btn-line-1, .nav-btn:hover > .nav-btn-line-4{
    opacity: 0;
}
.nav-btn:hover > .nav-btn-line-2{
    transform: rotateZ(45deg);
}
.nav-btn:hover > .nav-btn-line-3{
    transform: rotateZ(-45deg);
}


.nav-btn-line{
    position: absolute;
    height: 1px;
    width: 100%;
    background-color: white;
    z-index: 2;
    transition: all 0.5s ease;
    transition-property: transform, opacity;
}

.nav-btn-line-underlay{
    box-shadow: 0px 1px rgb(19, 19, 19);
}

.nav-btn-line-1{
    top: 0px;
}
.nav-btn-line-2{
    top: 9px;
}
.nav-btn-line-3{
    top: 9px;
}
.nav-btn-line-4{
    bottom: 0px;
}

.language-btn {
    position: absolute;
    top: 60px;
    font-size: 25px;
    font-weight: bold;
    width: 30px;
    height: 25px;
    line-height: 25px;
    left: 16px;
    z-index: 6;
    transition: all 0.5s ease;
    transition-property: box-shadow, color;
    cursor: pointer;
}

.inner-language-btn{
    left: 30px;
    padding-left: 10px;
}

.language-btn:hover{
    color: rgb(31, 31, 31);
    box-shadow: 0px 15px rgb(19, 19, 19);
}


.nav-content{
    height: 100%;
    min-height: 600px;
    display: flex;
    flex-direction: column;
}

.wrapper-comp-name {
    position: relative;
    width: 90%;
    margin-left: 40px;
    min-height: 200px;
    font-size: 50px;
    font-weight: bold;
    text-align: left;
    line-height: 50px;
}

.wrapper-comp-name-underlay{
   position: relative;
   height: 100%;
   width: 100%;
   min-height: 460px;
   margin-left: 0px;
}

.comp-name{
    position: relative;
    top: 100px;
}

.comp-name-underlay
{
    top: 0px;
    position: relative;
    font-size: 35px;
    height: 100%;
    width: 100%;
    writing-mode: vertical-rl;
    transform: rotateZ(180deg);
    text-align: center;
    line-height: 60px;
    color: black;
}

nav {
    position: relative;
    top: 40px;
    width: 100%;
    height: 100%;
}

nav > ul {
    position: relative;
    height: 225px;
}

nav > ul > li {
    position: relative;
    height: fit-content;
    margin-top: 20px;
}

.nav-item{
    position: relative;
    font-size: 25px;
    font-weight: bold;
    text-align: left;
    line-height: 25px;
    margin-left: 30px;
    padding-left: 10px;
    width: 90%;
    height: 25px;
}

.nav-indic{
    cursor: pointer;
    transition: all 0.5s ease;
    transition-property: box-shadow, color;
}

.nav-indic:hover{
    color: rgb(209, 209, 209);
    box-shadow: -15px 0px white;
}

.nav-selected {
    box-shadow: -15px 0px white;
}

.nav-sub {
    position: relative;
    margin: auto;
    width:  90%;
    line-height: 25px;
    margin-left: 40px;
}


footer {
    position: relative;
    width: 100%;
    height: 80px;
    color: rgb(134, 134, 134);
}

.wrapper-content {
    position: relative;
    width: 100%;
    height: 100%;
    
}

.wrapper-scroll {
    height: 100%;
    overflow: auto;
    margin: 0px;
}

.content {
    position: relative;
    box-sizing: border-box;
    padding:0px 10px 0px 53px;
    width: 100%;
    height: 100%;
    min-height: 650px;
    display: flex;
    flex-direction: row;
}

.wrapper-img-col {
    width: 50%;
    height: fit-content;
    box-sizing: border-box;
}

.w-img-col-3{
    display: none;
}

.img-col {
    display: flex;
    flex-direction: column;
    justify-content: left;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    padding: 10px;
}

.wrapper-img-item {
    width: fit-content;
    height: fit-content;
    overflow: hidden;
}

.img-item {
    width: 100%;
    height: auto;
    object-fit: contain;
    margin: 10px 0px;
    transition: filter 0.5s ease;
}

.img-item:hover{
    filter: brightness(0.8);
}

img {
    object-fit: contain;
}



.show{
    opacity: 1;
    transform: translateX(0px);
}

.hide{
    opacity: 0;
    transform: translateX(-325px);
}

